fixing alignment of quiz body

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -44,7 +44,7 @@ button {
 section {
     width: 50%;
     justify-content: center;
-    align-content: center;
+    align-content: left;
     visibility: hidden;
 }
 
